--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <main class="memory-game">
         <div class="card" data-card="corinthians">
-            <img class="card-front" src="./src/assets/images/sbranca de neve.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-front" src="./src/assets/images/branca de neve.png" alt="Face da carta">
+            <img class="card-back" src="./src/assets/images/cinderela.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="luigi">
