--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <main class="memory-game">
-        <div class="card" data-card="corinthians">
+        <div class="card" data-card="brancadeneve">
             <img class="card-front" src="./src/assets/images/branca de neve.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/cinderela.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="luigi">
-            <img class="card-front" src="./src/assets/images/luigi.png" alt="Face da carta">
+            <img class="card-front" src="./" alt="Face da carta">
             <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
         </div>
 
