--- a/index.html
+++ b/index.html
@@ -13,58 +13,58 @@
             <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
-        <div class="card" data-card="luigi">
-            <img class="card-front" src="./" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+        <div class="card" data-card="elsa">
+            <img class="card-front" src="./src/assets/images/elsa.png" alt="Face da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="mario">
             <img class="card-front" src="./src/assets/images/mario.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="peach">
             <img class="card-front" src="./src/assets/images/peach.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="toad">
             <img class="card-front" src="./src/assets/images/toad.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="yoshi">
             <img class="card-front" src="./src/assets/images/yoshi.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="corinthians">
-            <img class="card-front" src="./src/assets/images/corinthians.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-front" src="./src/assets/images/branca de neve.png" alt="Face da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="luigi">
-            <img class="card-front" src="./src/assets/images/luigi.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-front" src="./src/assets/images/elsa.png" alt="Face da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="mario">
             <img class="card-front" src="./src/assets/images/mario.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
         <div class="card" data-card="peach">
             <img class="card-front" src="./src/assets/images/peach.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="toad">
             <img class="card-front" src="./src/assets/images/toad.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
         <div class="card" data-card="yoshi">
             <img class="card-front" src="./src/assets/images/yoshi.png" alt="Face da carta">
-            <img class="card-back" src="./src/assets/images/box.png" alt="Verso da carta">
+            <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
     </main>
     
