--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="card" data-card="mario">
-            <img class="card-front" src="./src/assets/images/mario.png" alt="Face da carta">
+            <img class="card-front" src="./" alt="Face da carta">
             <img class="card-back" src="./src/assets/images/carta.png" alt="Verso da carta">
         </div>
 
